Test refactoring. Adding implNote to modified methods