@@ -27,9 +27,8 @@
  * @run testng WrappedUnmodifiableCollections
  */
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
 import java.util.*;
+import java.util.function.Function;
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
@@ -37,203 +36,66 @@ import static org.testng.Assert.*;
 @Test
 public class WrappedUnmodifiableCollections {
 
-    static final Class<?> UNMODIFIABLESET;
-    static final Class<?> UNMODIFIABLESORTEDSET;
-    static final Class<?> UNMODIFIABLENAVIGABLESET;
-    static final Class<?> UNMODIFIABLELIST;
-    static final Class<?> UNMODIFIABLERANDOMACCESSLIST;
-    static final Class<?> UNMODIFIABLEMAP;
-    static final Class<?> UNMODIFIABLESORTEDMAP;
-    static final Class<?> UNMODIFIABLENAVIGABLEMAP;
-    static final Class<?> UNMODIFIABLECOLLECTION;
+    private static <T,E extends T> void testWrapping(T collection, Function<T,E> wrapper) {
+        var collection1 = wrapper.apply(collection);
+        var collection2 = wrapper.apply(collection1);
+        assertNotSame(collection, collection2);
+        assertSame(collection1, collection2);
+    }
 
-    static {
-        try {
-            UNMODIFIABLESET = Class.forName("java.util.Collections$UnmodifiableSet");
-            UNMODIFIABLESORTEDSET = Class.forName("java.util.Collections$UnmodifiableSortedSet");
-            UNMODIFIABLENAVIGABLESET = Class.forName("java.util.Collections$UnmodifiableNavigableSet");
+    public void testUnmodifiableListsDontWrap() {
+        List<List<?>> lists = List.of(List.of(), List.of(1,2,3), List.of(1),
+                List.of(1,2,3,4,5,6),
+                List.of(1,2,3).subList(0,1),
+                new LinkedList<>(List.of(1,2,3)),
+                new ArrayList<>(List.of(1,2,3)));
 
-            UNMODIFIABLELIST = Class.forName("java.util.Collections$UnmodifiableList");
-            UNMODIFIABLERANDOMACCESSLIST = Class.forName("java.util.Collections$UnmodifiableRandomAccessList");
-
-            UNMODIFIABLEMAP = Class.forName("java.util.Collections$UnmodifiableMap");
-            UNMODIFIABLESORTEDMAP = Class.forName("java.util.Collections$UnmodifiableSortedMap");
-            UNMODIFIABLENAVIGABLEMAP = Class.forName("java.util.Collections$UnmodifiableNavigableMap");
-
-            UNMODIFIABLECOLLECTION= Class.forName("java.util.Collections$UnmodifiableCollection");
-
-
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException("Class Not found: " + e.getMessage());
+        for(List<?> list : lists) {
+            testWrapping(list, Collections::unmodifiableList);
         }
     }
 
-
-    public void testUnmodifiableListsDontWrap() {
-        List<Integer> list = List.of(1,2,3);
-        assertNotSame(list.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-        List<Integer> result = Collections.unmodifiableList(list);
-        assertSame(result.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        //Empty List
-        List<?> list2 = List.of();
-        assertNotSame(list2.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-        List<?> result2 = Collections.unmodifiableList(list2);
-        assertSame(result2.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        //ImmutableCollections.List12
-        List<?> list12 = List.of(1);
-        assertNotSame(list12.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-        List<?> result3 = Collections.unmodifiableList(list12);
-        assertSame(result3.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        //ImmutableCollections.ListN
-        List<?> listN = List.of(1,2,3,4,5,6);
-        assertNotSame(listN.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-        List<?> result4 = Collections.unmodifiableList(listN);
-        assertSame(result4.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        //ImmutableCollections.Sublist
-        List<?> subList = list.subList(0,1);
-        assertNotSame(subList.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-        List<?> subListResult = Collections.unmodifiableList(subList);
-        assertSame(subListResult.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        //Collections.UnmodifiableList
-        List<Integer> linkedList = new LinkedList<>();
-        linkedList.add(1);
-        linkedList.add(2);
-        linkedList.add(3);
-        List<?> resultLinkedList = Collections.unmodifiableList(linkedList);
-        assertNotSame(linkedList, resultLinkedList);
-        assertSame(resultLinkedList.getClass(), UNMODIFIABLELIST);
-
-        List<?> rewrappedLinkedListAttempt = Collections.unmodifiableList(resultLinkedList);
-        assertSame(resultLinkedList, rewrappedLinkedListAttempt);
-
-        //Collections.UnmodifiableRandomAccessList
-        List<Integer> arrayList = new ArrayList<>();
-        linkedList.add(1);
-        linkedList.add(2);
-        linkedList.add(3);
-
-        List<?> resultArrayList = Collections.unmodifiableList(arrayList);
-        assertNotSame(arrayList, resultArrayList);
-        assertSame(resultArrayList.getClass(), UNMODIFIABLERANDOMACCESSLIST);
-
-        List<?> rewrappedLinkedListAttempt2 = Collections.unmodifiableList(resultLinkedList);
-        assertSame(resultLinkedList, rewrappedLinkedListAttempt2);
-
-    }
-
-
     public void testUnmodifiableCollectionsDontWrap() {
-        List<Integer> list = new ArrayList<>();
-        list.add(1);
-        list.add(2);
-        list.add(3);
-
-        Collection<Integer> unmodifiableCollection = Collections.unmodifiableCollection(list);
-
-        assertSame(unmodifiableCollection.getClass(), UNMODIFIABLECOLLECTION);
-        Collection<?> unmodifiableCollection2 = Collections.unmodifiableCollection(unmodifiableCollection);
-
-        assertSame(UNMODIFIABLECOLLECTION, unmodifiableCollection2.getClass());
-        assertSame(unmodifiableCollection2, unmodifiableCollection);
-
+        Collection<?> list = List.of();
+        testWrapping(list, Collections::unmodifiableCollection);
     }
 
     public void testUnmodifiableSetsDontWrap() {
 
-        TreeSet<Integer> treeSet = new TreeSet<>();
+        List<Set<?>> sets = List.of(new TreeSet<>(),
+                                    Set.of(1, 2),
+                                    Set.of(1,2,3,4,5,6));
 
-        //Collections.UnmodifiableSet
-        Set<Integer> unmodifiableSet = Collections.unmodifiableSet(treeSet);
-        assertSame(unmodifiableSet.getClass(), UNMODIFIABLESET);
+        for (Set<?> set : sets) {
+            testWrapping(set, Collections::unmodifiableSet);
+        }
 
-        Set<Integer> rewrappedUnmodifiableSet = Collections.unmodifiableSet(unmodifiableSet);
-        assertSame(rewrappedUnmodifiableSet.getClass(), UNMODIFIABLESET);
-        assertSame(rewrappedUnmodifiableSet, unmodifiableSet);
+        TreeSet<?> treeSet = new TreeSet<>();
 
         //Collections.UnmodifiableSortedSet
-        SortedSet<Integer> unmodifiableSortedSet = Collections.unmodifiableSortedSet(treeSet);
-        assertSame(unmodifiableSortedSet.getClass(), UNMODIFIABLESORTEDSET);
-
-
-        SortedSet<Integer> reWrappedUmodifiableSortedSet = Collections.unmodifiableSortedSet(unmodifiableSortedSet);
-        assertSame(reWrappedUmodifiableSortedSet.getClass(), UNMODIFIABLESORTEDSET);
-        assertSame(reWrappedUmodifiableSortedSet, unmodifiableSortedSet);
+        testWrapping((SortedSet<?>) treeSet, Collections::unmodifiableSortedSet);
 
         //Collections.UnmodifiableNavigableSet
-        NavigableSet<Integer> unmodifiableNavigableSet = Collections.unmodifiableNavigableSet(treeSet);
-        assertSame(unmodifiableNavigableSet.getClass(), UNMODIFIABLENAVIGABLESET);
-
-        NavigableSet<Integer> reWrappedUnmodifiableNavigableSet =
-                Collections.unmodifiableNavigableSet(unmodifiableNavigableSet);
-        assertSame(reWrappedUnmodifiableNavigableSet.getClass(), UNMODIFIABLENAVIGABLESET);
-        assertSame(reWrappedUnmodifiableNavigableSet, unmodifiableNavigableSet);
-
-        //SET12
-        Set<Integer> set12 = Set.of(1,2);
-        assertNotSame(set12.getClass(), UNMODIFIABLESET);
-        Set<Integer> reWrappedSet12 = Collections.unmodifiableSet(set12);
-        assertSame(reWrappedSet12.getClass(), UNMODIFIABLESET);
-
-        //SETN
-        Set<Integer> setN = Set.of(1,2,3,4,5,6);
-        assertNotSame(setN.getClass(), UNMODIFIABLESET);
-        Set<Integer> reWrappedSetN = Collections.unmodifiableSet(setN);
-        assertSame(reWrappedSetN.getClass(), UNMODIFIABLESET);
-
+        testWrapping((NavigableSet<?>) treeSet, Collections::unmodifiableNavigableSet);
 
     }
 
     public void testUnmodifiableMapsDontWrap() {
-        TreeMap<Integer,Integer> treeMap = new TreeMap<>();
-        treeMap.put(1,1);
-        treeMap.put(2,2);
-        treeMap.put(3,3);
+        TreeMap<?,?> treeMap = new TreeMap<>();
 
-        //Collections.UnModifiableMap
-        Map<Integer,Integer> unmodifiableMap = Collections.unmodifiableMap(treeMap);
-        assertSame(unmodifiableMap.getClass(), UNMODIFIABLEMAP);
-        assertNotSame(unmodifiableMap, treeMap);
+        List<Map<?,?>> maps = List.of(treeMap,
+                Map.of(1,1),
+                Map.of(1, 1, 2, 2, 3, 3, 4, 4));
 
-        Map<Integer,Integer> reWrappedUnmodifiableMap = Collections.unmodifiableMap(unmodifiableMap);
-        assertSame(reWrappedUnmodifiableMap, unmodifiableMap);
+        for (Map<?,?> map : maps) {
+            testWrapping(map, Collections::unmodifiableMap);
+        }
 
         //Collections.UnModifiableSortedMap
-        SortedMap<Integer,Integer> unmodifiableSortedMap = Collections.unmodifiableSortedMap(treeMap);
-        assertSame(unmodifiableSortedMap.getClass(), UNMODIFIABLESORTEDMAP);
-        assertNotSame(unmodifiableSortedMap, treeMap);
-
-        Map<Integer,Integer> reWrappedUnmodifiableSortedMap = Collections.unmodifiableSortedMap(unmodifiableSortedMap);
-        assertSame(reWrappedUnmodifiableSortedMap, unmodifiableSortedMap);
+        testWrapping((SortedMap<?,?>) treeMap, Collections::unmodifiableSortedMap);
 
         //Collections.UnModifiableNavigableMap
-        NavigableMap<Integer,Integer> unmodifiableNavigableMap = Collections.unmodifiableNavigableMap(treeMap);
-        assertSame(unmodifiableNavigableMap.getClass(), UNMODIFIABLENAVIGABLEMAP);
-
-        NavigableMap<Integer,Integer> reWrappedUnmodifiableNavigableMap =
-                Collections.unmodifiableNavigableMap(unmodifiableNavigableMap);
-        assertSame(unmodifiableNavigableMap, reWrappedUnmodifiableNavigableMap);
-
-        //ImmutableCollections.Map1
-        Map<Integer,Integer> map1 = Map.of(1,1);
-        assertNotSame(map1.getClass(), UNMODIFIABLEMAP);
-
-        Map<Integer,Integer> reWrappedMap1 = Collections.unmodifiableMap(map1);
-        assertSame(reWrappedMap1.getClass(), UNMODIFIABLEMAP);
-
-        //ImmutableCollections.MapN
-        Map<Integer,Integer> mapN = Map.of(1,1, 2, 2, 3, 3, 4, 4);
-        assertNotSame(mapN.getClass(), UNMODIFIABLEMAP);
-
-        Map<Integer,Integer> reWrappedMapN = Collections.unmodifiableMap(mapN);
-        assertSame(reWrappedMapN.getClass(), UNMODIFIABLEMAP);
-
-
-
+        testWrapping((NavigableMap<?,?>) treeMap, Collections::unmodifiableNavigableMap);
 
     }
 
